# rust_multiples

./: Cargo.toml  test.py
src/: lib.rs
