[package]
name = "prime_multiples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmultiples"
crate-type = ["dylib"]

[dependencies]

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]

[profile.release]
opt-level = 3
